[tool.poetry]
name = "agents-course"
version = "0.1.0"
description = ""
authors = ["Ofek Gabay <ofek.gabay.he@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
