[tool.poetry]
name = "agents-course"
version = "0.1.0"
description = ""
authors = ["Ofek Gabay <ofek.gabay.he@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.29.3"
python-dotenv = "^1.0.1"
transformers = "^4.50.0"
tensorflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
